2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (offset_cast): Operate with integers of
	to_base_unit units, to avoid overflows and division by zero.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* testsuite/poke.pkl/eq-integers-5.pk: New test.
	* testsuite/poke.pkl/eq-offsets-8.pk: Likewise.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl.h (pkl_execute_file): Add argument exit_status.
	* libpoke/libpoke.h (pk_compile_file): Likewise.
	* libpoke/pkl.c (pkl_execute_file): Likewise.
	* libpoke/libpoke.c (pk_compile_file): Likewise.
	* libpoke/pkl-rt.pk (_pkl_exception_handler): Return the exit
	status.
	(Exception): Add field exit_status.
	(exit): The status code is 0 by default.
	* libpoke/pkl-asm.c (pkl_asm_finish): Adapted to the fact the
	default signal handler returns the exit status.
	* poke/poke.c (parse_args_2): Use the program's exit status as the
	exit status of poke when running -L.
	* libpoke/pvm-val.h (pvm_make_exception): Get an exit_exception
	argument.
	* libpoke/pvm-val.c (pvm_make_exception): Handle the exit status
	field of exceptions.
	* libpoke/pvm.h (PVM_E_EXIT): Define.
	(PVM_E_EXIT_MSG): Likewise.
	(PVM_E_EXIT_ESTATUS): Likewise.
	* libpoke/pvm.jitter (PVM_RAISE_DFL): Define and use through the
	file.
	* libpoke/ras: Pass the exit status argument to
	pvm_make_exception.
	* libpoke/pkl-gen.c: Likewise.
	* libpoke/pkl-asm.c: Likewise.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-rt.pk (EC_exit): Define.
	(E_exit): Likewise.
	(exit): LIkewise.
	(_pkl_exception_handler): Do not print an exception message for
	EC_exit.
	* libpoke/pvm.h (PVM_E_EXIT): Define.
	(PVM_E_EXIT_MSG): Likewise.

2020-05-22  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/elf.pk (ELFDATANONE): Define.
	(ELFDATA2LSB): Likewise.
	(ELFDATA2MSB): Likewise.
	(Elf64_Ehdr): Set endianness based on ei_data.

2020-05-21  Jose E. Marchesi  <jemarch@gnu.org>
