@@ -650,7 +650,7 @@ pk_fatal (const char *errmsg)
     pk_printf ("fatal error: %s\n", errmsg);
   pk_printf ("This is a bug. Please report it to %s\n",
              PACKAGE_BUGREPORT);
-  exit (EXIT_FAILURE);
+  abort ();
 }
 
 int
